--- a/styles.css
+++ b/styles.css
@@ -1,94 +1,201 @@
 @font-face {
     font-family: 'Tuers Cardboard';
-    src: url(tuers_cardboard.ttf);
+    src:
+        url(./fonts/tuers_cardboard.woff2) format('woff2'),
+        url(./fonts/tuers_cardboard.woff) format('woff');
 }
 
 .r {background: #d05040;}
 .g {background: #50d040;}
 .b {background: #4050d0;}
 
-nav {
+html {
+    /* Firefox */
+    scrollbar-color: #242424 #484848;
+}
+
+body::-webkit-scrollbar {
+    width: 8px;
+}
+
+body::-webkit-scrollbar-track {
+    background-color: #242424;
+}
+
+body::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: #484848;
+}
+
+.row {
+    background: #181818;
+}
+
+.navbar {
+    position: relative;
+    background: #242424;
+}
+
+.navbar-nav {
+    background: #242424;
+}
+
+@media (max-width: 991px) {
+    #navbar-menu {
+        width: 100%;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        padding: 0 1rem;
+        background: #242424;
+        z-index: 2;
+    }
+}
+
+.main-image-container {
+    position: relative;
+    background: #181818;
+    height: 50px;
+}
+
+.main-image-container::after {
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background:
+        radial-gradient(rgba(0, 0, 0, 0.25), rgba(8, 16, 0, 0.75));
     z-index: 1;
 }
 
-#image-text {
-    position: relative;
-    top: 2.5rem;
-    color: #fff;
-    font-size: 3rem;
-    text-align: center;
-    /*text-shadow: 0 0 16px #000, 0 0 8px #000c, 0 0 4px #0008;*/
-    text-shadow:
-        5px 5px 0 rgba(40, 200, 40, 0.25),
-        5px 5px 4px rgba(40, 200, 40, 0.25),
-        5px 5px 8px rgba(40, 200, 40, 0.25),
-        5px 5px 16px rgba(40, 200, 40, 0.25),
-        5px 5px 32px rgba(40, 250, 40, 0.25);
-    font-family: 'Tuers Cardboard', serif;
+.main-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    filter: grayscale(0.75);
 }
 
-#image-text span {
-    position: relative;
-    opacity: 0;
-    transition: top 1.5s ease-out, opacity 1.5s ease-out;
-}
-
-#image-text span:nth-child(odd) {
-    top: -4rem;
-}
-
-#image-text span:nth-child(even) {
-    top: 4rem;
-}
-
-.image-container {
-    background:
-        radial-gradient(rgba(0, 0, 0, 0.15), rgba(8, 32, 0, .5)),
-        center 65% / cover no-repeat url(./kyle-glenn-SrASYZZpyjw-unsplash.jpg);
-    filter: grayscale(25%);
-    overflow: hidden;
-}
-/*
-.info-section .col:nth-child(odd) img {
-    float: left;
-    margin-right: 0.5rem;
-}
-
-.info-section .col:nth-child(even) img {
-    float: right;
-    margin-left: 0.5rem;
-}
-*/
-.info-div {
+.main-image-text {
     display: flex;
-    gap: 1.5rem;
+    flex-direction: column;
+    width: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    color: #fff;
+    font-family: 'Tuers Cardboard', serif;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+}
+
+.main-image-caption {
+    font-size: 2.5rem;
+    text-align: center;
+    text-shadow:
+        5px 5px 2px rgba(32, 192, 8, 0.25),
+        5px 5px 4px rgba(32, 192, 8, 0.25),
+        5px 5px 8px rgba(32, 192, 8, 0.25),
+        5px 5px 16px rgba(32, 192, 8, 0.25),
+        5px 5px 32px rgba(32, 192, 8, 0.25);
+}
+
+.main-image-info-text {
+    padding: 0 4rem;
+    text-align: center;
+}
+
+.btn-join {
+    margin: 2rem auto 0;
+    border: 0;
+    border-radius: 100px;
+    padding: 0.75rem 1rem;
+    background: rgba(24, 24, 24, 0.85);
+    color: #fff;
+    box-shadow: 0 0 10px 4px rgba(32, 192, 8, 0.25);
+    transition: box-shadow 0.25s ease-in-out;
+}
+
+.btn-join:hover {
+    box-shadow: 0 0 16px 8px rgba(32, 192, 8, 0.25);
+}
+
+.info-section > div {
+    width: calc(100% - 45px);
+    min-height: 160px;
+    position: relative;
+    margin: 25px auto 0;
+    border-radius: 8px;
+    border-top-left-radius: 25px;
     padding: 0.5rem;
-    background: #303030;
+    background: #242424;
     color: #fff;
 }
 
-.info-section .col:nth-child(even) .info-div {
-    flex-direction: row-reverse;
-}
-
-.info-image-container {
-    width: 10rem;
-    min-width: 10rem;
-    height: 10rem;
-    min-height: 10rem;
+.info-img-container {
+    box-sizing: content-box;
+    width: 150px;
+    height: 150px;
     position: relative;
-    border-radius: 5rem;
+    margin: 5px;
+    border: 5px solid #303030;
+    border-radius: 100%;
     overflow: hidden;
 }
 
-.info-image-container img {
-    display: block;
+.info-img-container {
+    position: relative;
+    float: left;
+    top: -30px;
+    left: -30px;
+    shape-outside: circle(85px at 57px 53px);
+}
+
+.info-img-container::after {
+    content: '';
+    width: 100%;
+    height: 100%;
     position: absolute;
-    left: 50%;
-    max-height: 10rem;
-    transform: translateX(-50%);
+    top: 0;
+    left: 0;
+    background:
+        radial-gradient(rgba(0, 0, 0, 0.25), rgba(8, 16, 0, 0.75));
+}
+
+@media (max-width: 767px) {
+    .info-row .info-section:nth-child(even) > div {
+        border-radius: 8px;
+        border-top-right-radius: 25px;
+    }
+
+    .info-row .info-section:nth-child(even) .info-img-container  {
+        float: right;
+        top: -30px;
+        left: 30px;
+        shape-outside: circle(85px at 113px 53px);
+    }
+}
+
+.info-img-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    filter: grayscale(100%) brightness(125%);
 }
 
 .contact-info {
+    background: #242424;
     color: #fff;
+}
+
+.social-icon {
+    margin-top: -6px;
+    font-size: 1.25rem;
+}
+
+.social-icon:hover {
+    color: #d8d8d8;
 }
